--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+github.client.id=1984ccc4cf0af8fc304e
+github.client.secret=626c8a72a734ecd6547028d6ea782382127d10aa
+github.redirect_uri=http://localhost:8080/callback
+spring.datasource.url=jdbc:h2:F:/GitCode/mycommunity
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
