--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 github.client.id=1984ccc4cf0af8fc304e
 github.client.secret=1b503904bfbd985fe7069393f4e2dfecf593247d
 github.redirect_uri=http://localhost:8080/callback
-spring.datasource.url=jdbc:h2:F:/GitCode/mycommunity
-spring.datasource.username=sa
-spring.datasource.password=123
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/mycommunity?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT
+spring.datasource.username=root
+spring.datasource.password=333333
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=edu.example.mycommunity.mapper
 mybatis.mapper-locations=classpath:mapper/*.xml
